Cherry pick btree changes from master and migrate to row expression
(including cherry-picked commit d41859ebc98f77e08ebed778aa81ee15a84314f9)